kubernetes/yaml/resources/db-daemon/db-daemon.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-daemon
spec:
  podSelector:
    matchLabels:
      app: db-daemon
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 3001
          protocol: TCP
      from:
        - podSelector:
            matchLabels:
              db-daemon-client: "true"
  egress:
    - ports:
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app: db-postgres
    - ports: []
      to:
        - ipBlock:
            cidr: 1.2.3.4/32
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-daemon
  name: svc-db-daemon
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
  selector:
    app: db-daemon
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db-daemon
  name: db-daemon
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db-daemon
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: db-daemon
        version: "1.0.3"
        db-postgres-client: "true"
    spec:
      containers:
        - image: gcr.io/feeld-dave-00002/db-daemon:1
          name: db-daemon
          resources:
            requests:
              cpu: 1m
              memory: 32Mi
